# ceres_geosandbox

./: .gitignore  CMakeLists.txt  Evaluator.cpp  OptimizationProblem.cpp  ceres_geosandbox.cpp  input_output.cpp
include/: AngleCostFunction.hpp  AngleCostFunctionAutodiff.hpp  DistanceCostFunction.hpp  DistanceCostFunctionAutodiff.hpp  Evaluator.hpp  GnssCostFunction.hpp  GnssCostFunctionAutodiff.hpp  OptimizationProblem.hpp  geosandbox_datatypes.hpp  input_output.hpp
sandbox_datasets/01/: angles_graph.txt  angles_observations.txt  distances_graph.txt  distances_observations.txt  gnss_observations.txt
sandbox_datasets/02/: angles_graph.txt  angles_observations.txt  coordinates.txt  coordinates_initial.txt  distances_graph.txt  distances_observations.txt  gnss_observations.txt  report.txt
scripts/simulation/: requirements.txt
scripts/simulation/src/: compute_observations.py  geometry.py
